# Crystal2

./: .editorconfig  CMakeLists.txt  Crystal2.cpp  Crystal2.h  README.md  build.py  设计文档.md
Configs/: Default.json
Models/: ball.mtl  ball2.mtl
Resources/Configs/: Default.json
Resources/Scenes/: BallTest.json  BallTest2.json  CornellBox.json  CornellBox2.json  SimpleQuad.json  Sphere.json  SpherePure.json  SphereTest.json
Resources/Shaders/: pure.frag  pure.vert  sprite2d.frag  sprite2d.vert
Scenes/: BallTest (2).json  BallTest.json  BallTest2.json  CornellBox.json  CubeTest.json  Scene.json  Sphere (2).json  Sphere.json  SpherePure.json  SphereTest.json
src/: Crystal2.h  CrystalEngine.cpp  CrystalEngine.h  Engine.cpp  Engine.h
src/Accelerators/: Accelerator.cpp  Accelerator.h  BVH.cpp  BVH.h  Brute.cpp  Brute.h  KDTree.cpp  KDTree.h
src/BSDFs/: BSDF.cpp  BSDF.h  BlinnPhongReflection.cpp  BlinnPhongReflection.h  FresnelBlend.cpp  FresnelBlend.h  Lambertain.cpp  Lambertain.h  Microfacet.cpp  Microfacet.h  MicrofacetReflection.cpp  MicrofacetReflection.h  PhongReflection.cpp  PhongReflection.h  Reflections.cpp  Reflections.h  SpecularFresnel.cpp  SpecularFresnel.h  SpecularReflection.cpp  SpecularReflection.h  SpecularTransmission.cpp  SpecularTransmission.h
src/BSDFs/Models/: Fresnel.cpp  Fresnel.h  MicrofacetDistribution.cpp  MicrofacetDistribution.h
src/Cameras/: Camera.cpp  Camera.h  PerspCamera.cpp  PerspCamera.h
src/Core/: Camera.cpp  Camera.h  ConfigInfo.h  Entities.cpp  Entities.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  Object.h  Prototype.cpp  Prototype.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  SurfaceInteraction.cpp  SurfaceInteraction.h  Utils.h
src/Core/Threads/: FixedThreadPool.cpp  LockQueue.h
src/Demos/: BRDFDemo.cpp  BRDFDemo.h
src/Integrators/: DirectLightingIntegrator.cpp  DirectLightingIntegrator.h  Integrator.cpp  Integrator.h  PathTracingIntegrator.cpp  PathTracingIntegrator.h  SamplerIntegrator.cpp  SamplerIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
src/Lights/: AreaLight.h  DiffusedAreaLight.cpp  DiffusedAreaLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Loader/: SceneInfo.h  SceneLoader.cpp  SceneLoader.h
src/Loaders/: ConfigInfo.h  ConfigLoader.cpp  ConfigLoader.h  JsonLoader.cpp  JsonLoader.h  ObjLoader.cpp  ObjLoader.h  SceneInfo.h  SceneLoader.cpp  SceneLoader.h
src/Materials/: DiffuseMaterial.cpp  DiffuseMaterial.h  Glass.cpp  Glass.h  Material.cpp  Material.h  MicrofacetMaterial.cpp  MicrofacetMaterial.h  MirrorMaterial.cpp  MirrorMaterial.h  PhongMaterial.cpp  PhongMaterial.h  Plastic.cpp  Plastic.h
src/Samplers/: DefaultSampler.cpp  DefaultSampler.h  GlobalSampler.cpp  GlobalSampler.h  HaltonSampler.cpp  HaltonSampler.h  PixelSampler.cpp  PixelSampler.h  Sampler.cpp  Sampler.h  StratifiedSampler.cpp  StratifiedSampler.h
src/Scene/: SceneInfo.h  SceneLoader.cpp  SceneLoader.h
src/Shapes/: Disk.cpp  Disk.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
src/Textures/: CubemapTexture.cpp  CubemapTexture.h  Texel.cpp  Texel.h  Texture.h  UVTexture.h
